
5.1.0 -> 5.2a0:
    - jbj: rpmio: stub in rpmcurl options using popt.
    - jbj: rpmio: delete rpmrepo/rpmmtree, they live in tools/ now.
    - jbj: rpmz: fix some typos.
    - jbj: rpmdigest: parse/verify 0install manifest format.
    - jbj: rpmdigest: resurrect rpmdigest -c manifest before attempting
	0install manifest verification.
    - jbj: rpmdigest: add sha256 (and other) digests to 0install manifests.
    - jbj: rpmdigest: achieve "sha1new" 0install manifest spewage for trees.
    - jbj: rpmdigest: generalize to do multi-rooted Fts(3) traversal.
    - jbj: rpmdigest: pull in mtreeCwalk() for 0install dir args tree spewage.
    - jbj: rpmdigest: achieve 0install manifest spewage for file args.
    - jbj: rpmdigest: refactor to prepare for 0install manifest spewage.
    - jbj: rpmrepo: put a --stats stopwatch on the mmap digest cost as well.
    - jbj: rpmrepo: add repoFclose(), accumulate I/O stats into a ts.
    - jbj: rpmrepo: enable --stats display using transaction set.
    - jbj: add RPMTAG_NEEDSWHAT header extension.
    - jbj: don't revisit headers that RPMTAG_WHATNEEDS has already processed.
    - jbj: add RPMTAG_WHATNEEDS header extension.
    - jbj: move rpmns.[ch] to -lrpmdb for use with header format extensions.
    - jbj: pass rpmdb to header format extenensions with header.
    - jbj: move rpmevr.[ch] to -lrpmdb for use with header format extensions.
    - jbj: fix: "%description -n foo-bar" needs an additional comparison.
    - jbj: add non-{GIF,XPM} formats opaquely using arbitrary Icon: tagno.
    - jbj: fix: allocate Icon: buffer after iconsize is initialized.
    - jbj: permit configurable POSIX behavior for parameterized macros
	  (Marcin Kowalczyk<qrczak@knm.org.pl>).
    - jbj: add getter/setter methods to pass a rpmdb using a header argument.
    - jbj: tests: wire up plain HTTP manifest query.
    - jbj: http: ignore 501 from OPTIONS attempt to non-DAV server.
    - jbj: two copies of rpmrepo.c/rpmmtree.c is too many.