@@ -16,7 +16,7 @@ EXTRA_DIST = \
 
 EXTRA_PROGRAMS = rpmcpio rpmcurl \
 	rpmgenbasedir rpmgenpkglist rpmgensrclist \
-	rpmtar rpmz \
+	rpmtar rpmwget rpmz \
 	tdir tfts tget tglob thkp thtml tinv tkey tmacro tmagic tmire \
 	tput tpw trpmio tsw dumpasn1 lookup3
 
@@ -255,6 +255,9 @@ rpmgensrclist_LDADD = $(RPMIO_LDADD_COMMON)
 
 rpmtar_SOURCES = rpmtar.c
 rpmtar_LDADD = $(RPM_LDADD_COMMON)
+
+rpmwget_SOURCES = rpmwget.c
+rpmwget_LDADD = $(RPMIO_LDADD_COMMON)
 
 rpmz_SOURCES = rpmz.c
 rpmz_LDADD = $(RPMIO_LDADD_COMMON)
